reading timeout from the task definition; reading task's stderr and stdout streams